Enabling all the tests, and making it modular too. Also, changed ASMEventHandler to use the rather impressive class generation framework provided by modlauncher, rather than it's own weird thing that doesn't interoperate with anything else.
Signed-off-by: cpw <cpw+github@weeksfamily.ca>